# code-editor

./: .gitignore  README.md
backend/: .env.example  env.txt  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: autocomplete.py  rooms.py
backend/app/services/: autocomplete_service.py  room_service.py
backend/app/websocket/: manager.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Editor.css  Editor.tsx  Home.css  Home.tsx  UserList.tsx  Userlist.css
frontend/src/services/: api.ts
frontend/src/store/: editorSlice.ts
